# chess

./: .gitignore  CMakeLists.txt  CMakeSettings.json  libBitboard.h  libCommon.h  libEngine.h  libMovegen.h  libSearch.h  main.cpp  main.h
bitboard/: BB_BITBOARD.cpp  BB_BITBOARD.h  BB_FILE.cpp  BB_FILE.h  BB_RANK.cpp  BB_RANK.h  BB_SQUARE.cpp  BB_SQUARE.h  CMakeLists.txt  PlayerPieces.h
common/: CM_Assert.cpp  CM_Assert.h  CM_Compiler.cpp  CM_Compiler.h  CM_Helpers.cpp  CM_Helpers.h  CM_Intrinsics.cpp  CM_Intrinsics.h  CM_LOCK.h  CMakeLists.txt
engine/: CMakeLists.txt  Command.cpp  Command.h  Engine.cpp  Engine.h  ExecutionToken.cpp  ExecutionToken.h  StringHelper.cpp  StringHelper.h
engine/commands/: Command_DebugAttacks.cpp  Command_DebugAttacks.h  Command_DebugBoard.cpp  Command_DebugBoard.h  Command_DebugIntrinsics.cpp  Command_DebugIntrinsics.h  Command_DebugJumps.cpp  Command_DebugJumps.h  Command_DebugMove.cpp  Command_DebugMove.h  Command_DebugMoveGen.cpp  Command_DebugMoveGen.h  Command_DebugMoves.cpp  Command_DebugMoves.h  Command_DebugRetention.cpp  Command_DebugRetention.h  Command_DebugSearch.cpp  Command_DebugSearch.h  Command_DebugSlideMask.cpp  Command_DebugSlideMask.h  Command_DebugSlideTargets.cpp  Command_DebugSlideTargets.h  Command_DebugUnmove.cpp  Command_DebugUnmove.h  Command_Divide.cpp  Command_Divide.h  Command_ListMoves.cpp  Command_ListMoves.h  Command_Perft.cpp  Command_Perft.h  Command_Quit.cpp  Command_Quit.h  Command_SetFen.cpp  Command_SetFen.h  Command_Version.cpp  Command_Version.h
ghost/: bios.json  boot.json  core.json  engine.json  mod0_movegen.json  modX_bitboard.txt  modX_bitboard2.json  modX_common.json  modX_engine.json
ghost/legacy (pre shadow BIOS era)/: boot.json  core.json  engine.json  modX_bitboard.json  modX_common.json  modX_movegen.json  modX_search.json
movegen/: CMakeLists.txt  MG_BISHOP.cpp  MG_BISHOP.h  MG_CASTLEFLAGS.cpp  MG_CASTLEFLAGS.h  MG_HASH.cpp  MG_HASH.h  MG_JUMPTABLE.cpp  MG_JUMPTABLE.h  MG_KING.cpp  MG_KING.h  MG_KNIGHT.cpp  MG_KNIGHT.h  MG_MOVE.cpp  MG_MOVE.h  MG_MOVEDATA.cpp  MG_MOVEDATA.h  MG_MOVEGEN.cpp  MG_MOVEGEN.h  MG_MOVEINFO.cpp  MG_MOVEINFO.h  MG_MOVELIST.cpp  MG_MOVELIST.h  MG_MOVEMECHANIC.cpp  MG_MOVEMECHANIC.h  MG_MOVETYPE.cpp  MG_MOVETYPE.h  MG_PAWN.cpp  MG_PAWN.h  MG_PIECEINFO.h  MG_PIECETYPE.cpp  MG_PIECETYPE.h  MG_PLAYER.cpp  MG_PLAYER.h  MG_POSITION.cpp  MG_POSITION.h  MG_QUEEN.cpp  MG_QUEEN.h  MG_ROOK.cpp  MG_ROOK.h  (+6 more)
search/: CMakeLists.txt  SE_CALLBACKS.cpp  SE_CALLBACKS.h  SE_CONTROLFLAGS.h  SE_DISPATCHCONTEXT.h  SE_DISPATCHER.cpp  SE_DISPATCHER.h  SE_FORK.cpp  SE_FORK.h  SE_FORKMASK.cpp  SE_FORKMASK.h  SE_FSM.h  SE_GAME.cpp  SE_GAME.h  SE_HOSTCONTEXT.cpp  SE_HOSTCONTEXT.h  SE_NODE.cpp  SE_NODE.h  SE_NODEFLAGS.h  SE_NODESTATE.cpp  SE_NODESTATE.h  SE_PLAYEDMOVE.cpp  SE_PLAYEDMOVE.h  SE_SEARCH.cpp  SE_SEARCH.h  SE_THREAD.cpp  SE_THREAD.h  SE_Types.h
